--- a/index.html
+++ b/index.html
@@ -92,7 +92,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html" class="active"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -174,7 +176,8 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="prefacio"><a class="header" href="#prefacio">Prefacio</a></h1>
-<p>El propósito de este documento es dar una idea general de lo que es la programación competitiva e interesar a los estudiantes de grado de la Universidad de San Andrés en participar en este maravilloso deporte mental. Este documento de ninguna manera es completo, ya que hay una cantidad casi infinita de temas que podrían aparecer en una competencia. Sin embargo, nuestro objetivo es ofrecer una visión general de los temas más importantes, junto con soluciones a problemas clásicos y algunos otros difíciles. Casi todos los problemas se tomarán de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
+<p>El propósito de este documento es dar una idea general de lo que es la programación competitiva e interesar a los estudiantes de grado de la Universidad de San Andrés en participar en esta actividad. Este documento de ninguna manera es completo, ya que hay una cantidad casi infinita de temas que podrían aparecer en una competencia. Sin embargo, mi objetivo es ofrecer una visión general de los temas más importantes, junto con soluciones a problemas clásicos y algunos otros más miscelaneos. Casi todos los problemas se tomarán de <a href="https://cses.fi/">CSES</a>, y se recomienda encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
+<p>Adicionalmente, se sugiere una división de equipos categorizada en 3 roles, detallada en la seccion de <a href="2.5.html">cómo practicar</a>. Esta division se usa para particionar el libro, de tal forma que cada miembro del equipo puede leer solamente la parte que le corresponde.</p>
 
                     </main>
 
