--- a/2.2.html
+++ b/2.2.html
@@ -92,7 +92,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2.2.html" class="active"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -174,23 +176,22 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="entrada-y-salida"><a class="header" href="#entrada-y-salida">Entrada y salida</a></h1>
-<p>Hemos dicho que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, sin embargo, no hemos especificado cómo sucede esto en la competencia. Normalmente, esto se hace mediante salida estándar y entrada estándar. En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
+<p>Dijimos que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, sin embargo, no hemos especificado cómo sucede esto en la competencia. Normalmente, la interacción ocurre mediante la salida estándar y entrada estándar. Es decir, nos dan un <em>input</em> por la entrada estandar y debemos responder con el <em>output</em> correcto.</p>
+<p>En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
 <p>Como ejemplo veremos la solución para <a href="https://codeforces.com/problemset/problem/1772/A">este</a> problema:</p>
 <pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt;
 
-
 using namespace std;
-
 
 int main()
 {
     int t;
-    cin &gt;&gt; t;
+    cin &gt;&gt; t; // entrada (cantidad de casos)
     while (t--)
     {
         string op;
-        cin &gt;&gt; op;
-        cout &lt;&lt; (op[0] - '0') + (op[2] - '0') &lt;&lt; &quot;\n&quot;;
+        cin &gt;&gt; op; // entrada (el string de cada caso)
+        cout &lt;&lt; (op[0] - '0') + (op[2] - '0') &lt;&lt; "\n"; // salida (respuesta del caso)
     }
 }
 </code></pre>
