--- a/2.5.html
+++ b/2.5.html
@@ -92,7 +92,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2.5.html" class="active"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -173,15 +175,21 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="como-practicar"><a class="header" href="#como-practicar">Como practicar</a></h1>
+                        <h1 id="cómo-practicar"><a class="header" href="#cómo-practicar">Cómo practicar</a></h1>
 <h2 id="caso-general"><a class="header" href="#caso-general">Caso general</a></h2>
-<p>Esto no es trivial, depende de la resiliencia, conocimiento y propósito del estudiante. Enlazo recursos sobre esto:</p>
+<p>Practicar no es trivial, ya que depende de la resiliencia, conocimiento y motivación del estudiante. A continuación, se enlazan algunos recursos útiles sobre este tema:</p>
 <ul>
 <li><a href="https://codeforces.com/blog/entry/91114">My opinion on how to practice competitive programming - Radewoosh</a></li>
 <li><a href="https://codeforces.com/blog/entry/98806">How to practice Competitive Programming - Um_nik</a></li>
 </ul>
 <h2 id="caso-equipos"><a class="header" href="#caso-equipos">Caso equipos</a></h2>
-<p>Si estás leyendo este documento, entonces es altamente probable que seas un estudiante de Ingeniería en la Universidad de San Andrés y tengas como objetivo participar en el Torneo Argentino de Programación u otra competencia del estilo. De ser este el caso, es importante tener en cuenta que el tiempo de preparación disponible es finito, hay muchos equipos que llevan años de práctica y . <strong>TODO</strong></p>
+<p>Se sugiere la siguiente división de roles:</p>
+<h3 id="matemáticas--programación-dinámica"><a class="header" href="#matemáticas--programación-dinámica">Matemáticas + Programación Dinámica</a></h3>
+<p>La persona más precisa del equipo debería tomar este rol.</p>
+<h3 id="ordenamiento--búsqueda"><a class="header" href="#ordenamiento--búsqueda">Ordenamiento + Búsqueda</a></h3>
+<p>La persona más dedicada del equipo debería tomar este rol.</p>
+<h3 id="grafos"><a class="header" href="#grafos">Grafos</a></h3>
+<p>La persona más creativa del equipo debería tomar este rol.</p>
 
                     </main>
 
