--- a/introduction_1.html
+++ b/introduction_1.html
@@ -92,7 +92,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html" class="active"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -173,8 +175,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="1-introduccion"><a class="header" href="#1-introduccion">1 Introduccion</a></h1>
-<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener o no una diferencia de puntuación, y gana el concursante o equipo con mayor puntaje y menor penalidad (que suele ser una combinación entre tiempo en hacer los problemas y envíos incorrectos).</p>
+                        <h1 id="1-introducción"><a class="header" href="#1-introducción">1 Introducción</a></h1>
+<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener o no una diferencia de puntuación, y el ganador es el concursante o equipo con mayor puntaje y menor penalidad (esta suele ser una combinación entre tiempo de resolución y envíos incorrectos).</p>
 
                     </main>
 
