--- a/print.html
+++ b/print.html
@@ -93,7 +93,9 @@
             <div class="sidebar-scrollbox">
                 <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li></ol></li></ol>
             </div>
-            <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
+            <div id="sidebar-resize-handle" class="sidebar-resize-handle">
+                <div class="sidebar-resize-indicator"></div>
+            </div>
         </nav>
 
         <!-- Track and set sidebar scroll position -->
@@ -175,48 +177,44 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="prefacio"><a class="header" href="#prefacio">Prefacio</a></h1>
-<p>El propósito de este documento es dar una idea general de lo que es la programación competitiva e interesar a los estudiantes de grado de la Universidad de San Andrés en participar en este maravilloso deporte mental. Este documento de ninguna manera es completo, ya que hay una cantidad casi infinita de temas que podrían aparecer en una competencia. Sin embargo, nuestro objetivo es ofrecer una visión general de los temas más importantes, junto con soluciones a problemas clásicos y algunos otros difíciles. Casi todos los problemas se tomarán de <a href="https://cses.fi/">CSES</a>, y recomendamos encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="1-introduccion"><a class="header" href="#1-introduccion">1 Introduccion</a></h1>
-<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener o no una diferencia de puntuación, y gana el concursante o equipo con mayor puntaje y menor penalidad (que suele ser una combinación entre tiempo en hacer los problemas y envíos incorrectos).</p>
+<p>El propósito de este documento es dar una idea general de lo que es la programación competitiva e interesar a los estudiantes de grado de la Universidad de San Andrés en participar en esta actividad. Este documento de ninguna manera es completo, ya que hay una cantidad casi infinita de temas que podrían aparecer en una competencia. Sin embargo, mi objetivo es ofrecer una visión general de los temas más importantes, junto con soluciones a problemas clásicos y algunos otros más miscelaneos. Casi todos los problemas se tomarán de <a href="https://cses.fi/">CSES</a>, y se recomienda encarecidamente que el lector implemente todas las soluciones que comprenda.</p>
+<p>Adicionalmente, se sugiere una división de equipos categorizada en 3 roles, detallada en la seccion de <a href="2.5.html">cómo practicar</a>. Esta division se usa para particionar el libro, de tal forma que cada miembro del equipo puede leer solamente la parte que le corresponde.</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="1-introducción"><a class="header" href="#1-introducción">1 Introducción</a></h1>
+<p>La programación competitiva es una disciplina que se ocupa de la creación e implementación de algoritmos bajo una limitación de tiempo. Por lo general, a los concursantes se les presenta un conjunto común de problemas, que pueden tener o no una diferencia de puntuación, y el ganador es el concursante o equipo con mayor puntaje y menor penalidad (esta suele ser una combinación entre tiempo de resolución y envíos incorrectos).</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="lenguajes-de-programación"><a class="header" href="#lenguajes-de-programación">Lenguajes de programación</a></h1>
 <p>Los lenguajes de programación permitidos varían de una competencia a otra, permitiendo en algunos casos el uso de lenguajes no estándar como <em>Kotlin</em> o <em>Haskell</em>. Sin embargo, en su mayor parte, se permiten <em>C++</em> y <em>Java</em>. Esta guía estará escrita en <em>C++</em> y se espera que el lector esté familiarizado con <em>C</em>. De todas formas, exceptuando las líneas de código, los temas están dados de forma general.</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="entrada-y-salida"><a class="header" href="#entrada-y-salida">Entrada y salida</a></h1>
-<p>Hemos dicho que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, sin embargo, no hemos especificado cómo sucede esto en la competencia. Normalmente, esto se hace mediante salida estándar y entrada estándar. En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
+<p>Dijimos que la programación competitiva se ocupa de la <em>creación e implementación de algoritmos</em>, sin embargo, no hemos especificado cómo sucede esto en la competencia. Normalmente, la interacción ocurre mediante la salida estándar y entrada estándar. Es decir, nos dan un <em>input</em> por la entrada estandar y debemos responder con el <em>output</em> correcto.</p>
+<p>En C++, esto es <strong>cin</strong> para entrada y <strong>cout</strong> para salida.</p>
 <p>Como ejemplo veremos la solución para <a href="https://codeforces.com/problemset/problem/1772/A">este</a> problema:</p>
 <pre><code class="language-cpp">#include &lt;bits/stdc++.h&gt;
 
-
 using namespace std;
-
 
 int main()
 {
     int t;
-    cin &gt;&gt; t;
+    cin &gt;&gt; t; // entrada (cantidad de casos)
     while (t--)
     {
         string op;
-        cin &gt;&gt; op;
-        cout &lt;&lt; (op[0] - '0') + (op[2] - '0') &lt;&lt; &quot;\n&quot;;
+        cin &gt;&gt; op; // entrada (el string de cada caso)
+        cout &lt;&lt; (op[0] - '0') + (op[2] - '0') &lt;&lt; "\n"; // salida (respuesta del caso)
     }
 }
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="números-y-cómo-representarlos"><a class="header" href="#números-y-cómo-representarlos">Números y cómo representarlos</a></h1>
 <p>Tipos de números frecuentes en programación competitiva:</p>
 <ul>
-<li>
-<p><strong>int</strong> - representa números enteros y existe entre [\(-2^{31}\), \(2^{31} - 1\)], suele ser usado en la mayoria de los contextos.</p>
-</li>
-<li>
-<p><strong>long double</strong> - se usa en entornos donde queremos representar un número que no es entero. Esto común en problemas de geometría o de simulación de un proceso físico, por ejemplo. Este número no es exacto y puede tener errores de precisión. Por lo general, en problemas donde se necesita una representación no entera, los enunciados piden que genere la respuesta con una precisión de 1e-6. Una forma común de lidiar con esto es:</p>
-<pre><code class="language-cpp">long double number = 0.12312;
-int digits = 6; // for 1e-6
-cout &lt;&lt; fixed &lt;&lt; setprecision(digits) &lt;&lt; number;
+<li><strong>int</strong> - representa números enteros y existe entre [\(-2^{31}\), \(2^{31} - 1\)], suele ser usado en la mayoria de los contextos.</li>
+<li><strong>long double</strong> - se usa en entornos donde queremos representar un número que no es entero. Esto es común en problemas de geometría o de simulación de un proceso físico, por ejemplo. Este número no es exacto y puede tener errores de precisión. Por lo general, en problemas donde se necesita una representación no entera, los enunciados piden que se genere la respuesta sujeta a una precisión fija (un número típico es \(10^{-6}\)). Una forma común de lidiar con esto es:</li>
+</ul>
+<pre><code class="language-cpp">    long double number = 0.12312;
+    int digits = 6; // for 1e-6
+    cout &lt;&lt; fixed &lt;&lt; setprecision(digits) &lt;&lt; number;
 </code></pre>
-</li>
-<li>
-<p><strong>long long int</strong> - este es un número entero pero con el doble de bits. Se usa cuando un <strong>int</strong> no es suficiente. En mi opinión, este es el tipo de datos más útil y normalmente lo uso de forma predeterminada, en lugar de <strong>int</strong>.</p>
-</li>
+<ul>
+<li><strong>long long int</strong> - este es un número entero pero con el doble de bits. Se usa cuando un <strong>int</strong> no es suficiente. En mi opinión, este es el tipo de datos más útil y normalmente lo uso de forma predeterminada, en lugar de <strong>int</strong>.</li>
 </ul>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="template-de-c"><a class="header" href="#template-de-c">Template de C++</a></h1>
 <p>Un aspecto clave de la programación competitiva es el tiempo: si tenés una solución correcta para un problema, pero te lleva horas implementarla, entonces estás perdiendo tiempo que podrías utilizar para pensar en otros problemas. Comparto mi template, comentada con explicaciones.</p>
@@ -227,7 +225,7 @@ cout &lt;&lt; fixed &lt;&lt; setprecision(digits) &lt;&lt; number;
 #define dforsn(i, s, n) for (tint i = tint(n) - 1; i &gt;= s; i--)
 #define sz(x) tint(x.size())
 #define all(x) x.begin(), x.end()
-#define DBG(x) cerr &lt;&lt; #x &lt;&lt; &quot; = &quot; &lt;&lt; x &lt;&lt; endl
+#define DBG(x) cerr &lt;&lt; #x &lt;&lt; " = " &lt;&lt; x &lt;&lt; endl
 </code></pre>
 <ul>
 <li><strong>forn(i, n)</strong> - es un for que recorre los numeros desde el 0 hasta el n-1, la i es un placeholder para la variable de iteración.</li>
@@ -258,9 +256,8 @@ using pii = pair&lt;tint, tint&gt;;
 }
 </code></pre>
 <p>Esta función suele ser llamada en la primera línea del main en C++, se encarga de optimizar <strong>std::cin</strong> y <strong>std::cout</strong>, que por default son lentos.</p>
-<h2 id="funciones-para-debuggear"><a class="header" href="#funciones-para-debuggear">Funciones para debuggear</a></h2>
-<p>chmax y chmin 
-La idea de estas funciones es generalizar funciones nativas del lenguaje como +=, &amp;= o |=. chmax(variable, valor) actualiza a la variable de esta forma: variable = max(variable, valor). chmin hace lo mismo pero con el minimo.</p>
+<h2 id="chmax-y-chmin"><a class="header" href="#chmax-y-chmin">chmax y chmin</a></h2>
+<p>La idea de estas funciones es generalizar funciones nativas del lenguaje como +=, &amp;= o |=. chmax(variable, valor) actualiza a la variable de esta forma: variable = max(variable, valor). chmin hace lo mismo pero con el minimo.</p>
 <pre><code class="language-cpp">template &lt;typename T&gt;
 inline void chmax(T &amp;lhs, T rhs)
 {
@@ -273,12 +270,12 @@ inline void chmin(T &amp;lhs, T rhs)
     lhs = min(lhs, rhs);
 }
 </code></pre>
-<h2 id="cout-para-vectores-y-pares"><a class="header" href="#cout-para-vectores-y-pares">cout para vectores y pares</a></h2>
+<h2 id="funciones-para-debuggear"><a class="header" href="#funciones-para-debuggear">Funciones para debuggear</a></h2>
 <pre><code class="language-cpp">// printea pairs, sirve para debuggear
 template &lt;typename T, typename U&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
 {
-    os &lt;&lt; &quot;(&quot; &lt;&lt; p.first &lt;&lt; &quot;, &quot; &lt;&lt; p.second &lt;&lt; &quot;)&quot;;
+    os &lt;&lt; "(" &lt;&lt; p.first &lt;&lt; ", " &lt;&lt; p.second &lt;&lt; ")";
     return os;
 }
 
@@ -286,14 +283,14 @@ ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p)
 template &lt;typename T&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const vector&lt;T&gt; &amp;v)
 {
-    os &lt;&lt; &quot;[&quot;;
+    os &lt;&lt; "[";
     forn(i, sz(v))
     {
         if (i &gt; 0)
-            os &lt;&lt; &quot;, &quot;;
+            os &lt;&lt; ", ";
         os &lt;&lt; v[i];
     }
-    os &lt;&lt; &quot;]&quot;;
+    os &lt;&lt; "]";
     return os;
 }
 </code></pre>
@@ -305,7 +302,7 @@ ostream &amp;operator&lt;&lt;(ostream &amp;os, const vector&lt;T&gt; &amp;v)
 #define dforsn(i, s, n) for (tint i = tint(n) - 1; i &gt;= s; i--)
 #define sz(x) tint(x.size())
 #define all(x) x.begin(), x.end()
-#define DBG(x) cerr &lt;&lt; #x &lt;&lt; &quot; = &quot; &lt;&lt; x &lt;&lt; endl
+#define DBG(x) cerr &lt;&lt; #x &lt;&lt; " = " &lt;&lt; x &lt;&lt; endl
 
 using namespace std;
 
@@ -318,7 +315,7 @@ inline void fastIO() {
   cin.tie(NULL);
 }
 
-inline string YN(bool x, string y = &quot;YES&quot;, string n = &quot;NO&quot;) { return (x ? y : n); }
+inline string YN(bool x, string y = "YES", string n = "NO") { return (x ? y : n); }
 
 template &lt;typename T&gt;
 inline void chmax(T &amp;lhs, T rhs) {
@@ -332,45 +329,52 @@ inline void chmin(T &amp;lhs, T rhs) {
 
 template &lt;typename T, typename U&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const pair&lt;T, U&gt; &amp;p) {
-  os &lt;&lt; &quot;(&quot; &lt;&lt; p.first &lt;&lt; &quot;, &quot; &lt;&lt; p.second &lt;&lt; &quot;)&quot;;
+  os &lt;&lt; "(" &lt;&lt; p.first &lt;&lt; ", " &lt;&lt; p.second &lt;&lt; ")";
   return os;
 }
 
 template &lt;typename T&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const vector&lt;T&gt; &amp;v) {
-  os &lt;&lt; &quot;[&quot;;
+  os &lt;&lt; "[";
   forn(i, sz(v)) {
-    if (i &gt; 0) os &lt;&lt; &quot;, &quot;;
+    if (i &gt; 0) os &lt;&lt; ", ";
     os &lt;&lt; v[i];
   }
-  os &lt;&lt; &quot;]&quot;;
+  os &lt;&lt; "]";
   return os;
 }
 
 template &lt;typename T, size_t N&gt;
 ostream &amp;operator&lt;&lt;(ostream &amp;os, const array&lt;T, N&gt; &amp;v) {
-  os &lt;&lt; &quot;[&quot;;
+  os &lt;&lt; "[";
   forn(i, N) {
-    if (i &gt; 0) os &lt;&lt; &quot;, &quot;;
+    if (i &gt; 0) os &lt;&lt; ", ";
     os &lt;&lt; v[i];
   }
-  os &lt;&lt; &quot;]&quot;;
+  os &lt;&lt; "]";
   return os;
 }
 
 int main(){
     fastIO();
+    //aca empieza el problema
 }
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="como-practicar"><a class="header" href="#como-practicar">Como practicar</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="cómo-practicar"><a class="header" href="#cómo-practicar">Cómo practicar</a></h1>
 <h2 id="caso-general"><a class="header" href="#caso-general">Caso general</a></h2>
-<p>Esto no es trivial, depende de la resiliencia, conocimiento y propósito del estudiante. Enlazo recursos sobre esto:</p>
+<p>Practicar no es trivial, ya que depende de la resiliencia, conocimiento y motivación del estudiante. A continuación, se enlazan algunos recursos útiles sobre este tema:</p>
 <ul>
 <li><a href="https://codeforces.com/blog/entry/91114">My opinion on how to practice competitive programming - Radewoosh</a></li>
 <li><a href="https://codeforces.com/blog/entry/98806">How to practice Competitive Programming - Um_nik</a></li>
 </ul>
 <h2 id="caso-equipos"><a class="header" href="#caso-equipos">Caso equipos</a></h2>
-<p>Si estás leyendo este documento, entonces es altamente probable que seas un estudiante de Ingeniería en la Universidad de San Andrés y tengas como objetivo participar en el Torneo Argentino de Programación u otra competencia del estilo. De ser este el caso, es importante tener en cuenta que el tiempo de preparación disponible es finito, hay muchos equipos que llevan años de práctica y . <strong>TODO</strong></p>
+<p>Se sugiere la siguiente división de roles:</p>
+<h3 id="matemáticas--programación-dinámica"><a class="header" href="#matemáticas--programación-dinámica">Matemáticas + Programación Dinámica</a></h3>
+<p>La persona más precisa del equipo debería tomar este rol.</p>
+<h3 id="ordenamiento--búsqueda"><a class="header" href="#ordenamiento--búsqueda">Ordenamiento + Búsqueda</a></h3>
+<p>La persona más dedicada del equipo debería tomar este rol.</p>
+<h3 id="grafos"><a class="header" href="#grafos">Grafos</a></h3>
+<p>La persona más creativa del equipo debería tomar este rol.</p>
 
                     </main>
 
