--- a/3/modular.html
+++ b/3/modular.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Guía de Programacion Competitiva</title>
-        <base href="/">
+        <title>aritmética Modular - Guía de Programacion Competitiva</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -38,7 +37,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -91,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2/2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2/2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2/2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2/2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2/2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li><li class="chapter-item expanded "><a href="2/2.6.html"><strong aria-hidden="true">2.6.</strong> Problemas Introductorios</a></li></ol></li><li class="chapter-item expanded "><a href="3/Introduccion.html"><strong aria-hidden="true">3.</strong> Matematicas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3/divisibilidad.html"><strong aria-hidden="true">3.1.</strong> Divisibilidad</a></li><li class="chapter-item expanded "><a href="3/modular.html"><strong aria-hidden="true">3.2.</strong> aritmética Modular</a></li><li class="chapter-item expanded "><a href="3/combi.html"><strong aria-hidden="true">3.3.</strong> Combinatoria</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="../introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../2/2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="../2/2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="../2/2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="../2/2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="../2/2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li><li class="chapter-item expanded "><a href="../2/2.6.html"><strong aria-hidden="true">2.6.</strong> Problemas Introductorios</a></li></ol></li><li class="chapter-item expanded "><a href="../3/Introduccion.html"><strong aria-hidden="true">3.</strong> Matematicas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../3/divisibilidad.html"><strong aria-hidden="true">3.1.</strong> Divisibilidad</a></li><li class="chapter-item expanded "><a href="../3/modular.html" class="active"><strong aria-hidden="true">3.2.</strong> aritmética Modular</a></li><li class="chapter-item expanded "><a href="../3/combi.html"><strong aria-hidden="true">3.3.</strong> Combinatoria</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -147,7 +146,7 @@
                     <h1 class="menu-title">Guía de Programacion Competitiva</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -176,14 +175,91 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="aritmética-modular"><a class="header" href="#aritmética-modular">Aritmética Modular</a></h1>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<center>
+<i>Los números no, sus restos.</i>
+</center>
+<p>En muchas situaciones, sucede que el problema lidia conceptualmente con números de magnitudes inmensas (\(&gt;10^{18}\)), lo que causa ciertas incomodidades cuando tenemos que operar con ellos. Resulta que una solución común a esta problemática es pedir el resultado módulo un número primo grande. En esta sección vemos operaciones básicas de la aritmética modular.</p>
+<h2 id="repaso-de-operaciones-básicas"><a class="header" href="#repaso-de-operaciones-básicas">Repaso de operaciones básicas</a></h2>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<p>$$(a+b) \bmod m = (a \bmod m + b \bmod m) \bmod m$$</p>
+<p>$$(a-b) \bmod m = (a \bmod m - b \bmod m) \bmod m$$</p>
+<p>$$(a \cdot b) \pmod{m} = ((a \bmod m) \cdot (b \bmod m)) \bmod m$$</p>
+<p>$$a^b \bmod {m} = (a \bmod m)^b \bmod m$$</p>
+<h2 id="exponenciación-rápida-y-modular"><a class="header" href="#exponenciación-rápida-y-modular">Exponenciación Rápida (y modular)</a></h2>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<p>Se muestra como exponenciar en \(\Theta(log(n))\). Como detalle, se añade que sea modular, pero esto es opcional.</p>
+<h3 id="algoritmo-modpow-exponenciación-rápida"><a class="header" href="#algoritmo-modpow-exponenciación-rápida"><strong>Algoritmo:</strong> modPow (Exponenciación Rápida)</a></h3>
+<pre><code class="language-cpp">tint modPow(tint x, tint n, const tint MOD)
+{
+    if (n == 0)
+        return 1;
+    tint ans = modPow(x, n / 2, MOD);
+    ans = (ans * ans) % MOD;
+    if (n % 2)
+        ans = (ans * x) % MOD;
+    return ans;
+}
+</code></pre>
+<ul>
+<li>Memoria: \( \Theta(1) \)</li>
+<li>Complejidad \( \Theta(\log{n}) \)</li>
+</ul>
+<h2 id="inversa-modular"><a class="header" href="#inversa-modular">Inversa Modular</a></h2>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<p>Dividir no es tan fácil en la aritmética modular.</p>
+<h3 id="pequeño-teorema-de-fermat-fermatito"><a class="header" href="#pequeño-teorema-de-fermat-fermatito">Pequeño Teorema de Fermat (Fermatito)</a></h3>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<p>Resulta que si el módulo es primo, podemos usar un famoso teorema de la teoría de números llamada "Pequeño teorema de Fermat", a veces cariñosamente referido como "Fermatito":</p>
+<p>$$
+a^{p-1}\equiv 1  \text{  (mod p)} \text{, con p primo}
+$$</p>
+<p>Separando el producto, nos queda</p>
+<p>$$
+a^{p-2}a\equiv 1  \text{  (mod p)}
+$$</p>
+<p>Con lo que podemos ver que \(a^{p-2}\) es la inversa modular de a. Por lo tanto, si necesitamos dividir por a, simplemente podemos multiplicar por \(a^{-1} \equiv a^{p-2}\)</p>
+<h3 id="algoritmo-inversa-modular"><a class="header" href="#algoritmo-inversa-modular"><strong>Algoritmo:</strong> Inversa modular</a></h3>
+<pre><code class="language-cpp">tint modInv(tint num, const tint MOD){
+    return modPow(num, MOD-2, MOD); // usamos la funcion de exponenciacion modular definida anteriormente.
+}
+</code></pre>
+<ul>
+<li>Memoria: \( \Theta(1) \)</li>
+<li>Complejidad \( \Theta(\log{n}) \)</li>
+</ul>
+<h4 id="ejemplo"><a class="header" href="#ejemplo">Ejemplo</a></h4>
+<pre><code class="language-cpp">tint num = 19; // número cualquiera, módulo MOD
+tint numDivididoPor2 = (num * modInv(2, MOD)) % MOD;
+</code></pre>
+<h2 id="problemas"><a class="header" href="#problemas">Problemas</a></h2>
+<ul>
+<li><a href="https://cses.fi/problemset/task/1095">Exponentiation I</a></li>
+<li><a href="https://cses.fi/problemset/task/1712">Exponentiation II</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../3/divisibilidad.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next prefetch" href="../3/combi.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -191,7 +267,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../3/divisibilidad.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next prefetch" href="../3/combi.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -204,13 +286,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
