--- a/3/combi.html
+++ b/3/combi.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Guía de Programacion Competitiva</title>
-        <base href="/">
+        <title>Combinatoria - Guía de Programacion Competitiva</title>
 
 
         <!-- Custom HTML head -->
@@ -13,21 +12,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
 
@@ -38,7 +37,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -91,7 +90,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="2/2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="2/2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="2/2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="2/2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="2/2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li><li class="chapter-item expanded "><a href="2/2.6.html"><strong aria-hidden="true">2.6.</strong> Problemas Introductorios</a></li></ol></li><li class="chapter-item expanded "><a href="3/Introduccion.html"><strong aria-hidden="true">3.</strong> Matematicas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="3/divisibilidad.html"><strong aria-hidden="true">3.1.</strong> Divisibilidad</a></li><li class="chapter-item expanded "><a href="3/modular.html"><strong aria-hidden="true">3.2.</strong> aritmética Modular</a></li><li class="chapter-item expanded "><a href="3/combi.html"><strong aria-hidden="true">3.3.</strong> Combinatoria</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../preface.html"><strong aria-hidden="true">1.</strong> Prefacio</a></li><li class="chapter-item expanded "><a href="../introduction_1.html"><strong aria-hidden="true">2.</strong> Introduccion</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../2/2.1.html"><strong aria-hidden="true">2.1.</strong> Lenguajes de programación</a></li><li class="chapter-item expanded "><a href="../2/2.2.html"><strong aria-hidden="true">2.2.</strong> Entrada y salida</a></li><li class="chapter-item expanded "><a href="../2/2.3.html"><strong aria-hidden="true">2.3.</strong> Números y cómo representarlos</a></li><li class="chapter-item expanded "><a href="../2/2.4.html"><strong aria-hidden="true">2.4.</strong> Template de C++</a></li><li class="chapter-item expanded "><a href="../2/2.5.html"><strong aria-hidden="true">2.5.</strong> Cómo Practicar</a></li><li class="chapter-item expanded "><a href="../2/2.6.html"><strong aria-hidden="true">2.6.</strong> Problemas Introductorios</a></li></ol></li><li class="chapter-item expanded "><a href="../3/Introduccion.html"><strong aria-hidden="true">3.</strong> Matematicas</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../3/divisibilidad.html"><strong aria-hidden="true">3.1.</strong> Divisibilidad</a></li><li class="chapter-item expanded "><a href="../3/modular.html"><strong aria-hidden="true">3.2.</strong> aritmética Modular</a></li><li class="chapter-item expanded "><a href="../3/combi.html" class="active"><strong aria-hidden="true">3.3.</strong> Combinatoria</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -147,7 +146,7 @@
                     <h1 class="menu-title">Guía de Programacion Competitiva</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -176,13 +175,77 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <h1 id="combinatoria"><a class="header" href="#combinatoria">Combinatoria</a></h1>
+<blockquote>
+<p>Importancia: <font color="yellow">Media</font></p>
+</blockquote>
+<center>
+<i>Contar cosas puede ser difícil</i>
+</center>
+<p>Es común que en un problema se nos pregunte <em>"¿De cuántas formas podemos hacer X?"</em> o <em>"¿De cuántas formas podemos ganar un determinado juego desde una posición inicial?"</em>. Para este tipo de problemas, necesitamos recurrir a la combinatoria.</p>
+<h2 id="coeficiente-binomial"><a class="header" href="#coeficiente-binomial">Coeficiente Binomial</a></h2>
+<blockquote>
+<p>Importancia: <font color="green">Alta</font></p>
+</blockquote>
+<p>Cualquiera que haya cursado las primeras clases de probabilidad está familiarizado con el coeficiente binomial: la forma de contar cuántas formas existen para elegir \(k\) elementos de un conjunto de \(n\) elementos posibles. Disponemos de una fórmula cerrada para calcularlo, que seguramente conocen:</p>
+<p>$$
+{n \choose k} = \frac{n!}{(n-k)!k!}
+$$</p>
+<p>El problema con esta fórmula es que necesitamos conocer los valores de \(n!\), \((n-k)!\) y \(k!\) para calcularla "explícitamente". El gran inconveniente es que los números factoriales crecen de manera descomunal. Por ejemplo, \(100 \choose 4\) es \(3, 921, 225, \) pero si quisiéramos calcularlo con la fórmula que conocemos, necesitaríamos primero calcular \(100! = 9.33 \times 10^{157}\), lo que es aproximadamente dos veces mayor que la cantidad de átomos en el universo conocido. Es decir, para la mayoría de nuestros usos, los números que queremos calcular son razonablemente pequeños, pero los factoriales necesarios son ridículamente grandes.</p>
+<h3 id="triángulo-de-pascal"><a class="header" href="#triángulo-de-pascal">Triángulo de Pascal</a></h3>
+<p>La solución es la siguiente recurrencia:
+$$\binom{n}{k} = \binom{n - 1}{k - 1} + \binom{n - 1}{k}$$</p>
+<p>La intuición detrás de esto es fijar un elemento \(x\) como parte de nuestro conjunto respuesta y elegir \(k − 1\) elementos de los \(n − 1\) restantes (primer termino), o elegir \(k\) de entre \(n − 1\) elementos restantes, si excluimos a x del conjunto respuesta (segundo termino).</p>
+<p>Los casos base de la recurrencia son:</p>
+<p>$$\binom{n}{0} = \binom{n}{n} = 1$$</p>
+<p>porque existe una única forma de elegir un conjunto de 0 elementos o uno que incluya a todos.</p>
+<p>Esta fórmula recursiva es conocida como el <strong>Triángulo de Pascal</strong>.</p>
+<pre><code class="language-cpp">tint binomial(tint n, tint k)
+{
+
+    // dp[i][j] guarda iCj
+    vector&lt;vi&gt; dp(n + 1, vector&lt;tint&gt;(k + 1, 0));
+
+    // casos base descritos arriba
+    forn(i, n + 1)
+    {
+        dp[i][0] = 1;
+        if (i &lt;= k)
+            dp[i][i] = 1;
+    }
+
+    forn(i, n + 1)
+        forsn(j, 1, min(i, k) + 1)
+            dp[i][j] = (dp[i - 1][j - 1] + dp[i - 1][j]); // usa la recurrencia de arriba
+
+    return dp[n][k];
+
+}
+</code></pre>
+<h2 id="subfactorial"><a class="header" href="#subfactorial">Subfactorial</a></h2>
+<blockquote>
+<p>Importancia: <font color="red">Baja</font></p>
+</blockquote>
+<p>próximamente.</p>
+<h2 id="números-de-catalán"><a class="header" href="#números-de-catalán">Números de Catalán</a></h2>
+<blockquote>
+<p>Importancia: <font color="red">Baja</font></p>
+</blockquote>
+<p>próximamente.</p>
+<h2 id="problemas"><a class="header" href="#problemas">Problemas</a></h2>
+<ul>
+<li><a href="https://cses.fi/problemset/task/1079">Binomial Coefficients</a></li>
+<li><a href="https://cses.fi/problemset/task/1715">Creating Strings</a></li>
+<li><a href="https://cses.fi/problemset/task/1716">Distributing Apples</a></li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../3/modular.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
 
                         <div style="clear: both"></div>
@@ -191,6 +254,9 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../3/modular.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
             </nav>
 
@@ -204,13 +270,13 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
 
